Refactor camping guide previews in HTML and CSS for improved readability and user experience. Updated summaries and links for better navigation across multiple language versions.

--- a/index.html
+++ b/index.html
@@ -491,78 +491,93 @@
       <section id="camping-guides" class="guides container" aria-label="KiwiCamping tutorials and blog posts">
 <article class="guide-preview">
             <h3><a href="best-nz-camping-apps.html">Best Camping Apps for New Zealand in 2025</a></h3>
-            <ul class="guide-bullets"><li>Lab-tested KiwiCamping vs Rankers, CamperMate, WikiCamps, and AllTrails across NZ.</li><li>Shows who each app suits, how offline data behaves, and where pricing/privacy differ.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">We field-tested KiwiCamping against Rankers, CamperMate, WikiCamps, and AllTrails to see which app actually works on New Zealand roads. Learn who each option suits, how offline data behaves, and where pricing or privacy pitfalls appear.</p>
+            <p class="guide-links"><a href="best-nz-camping-apps.html">Read the full guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="freedom-camping-rules-nz.html">Freedom Camping in New Zealand, Rules by Region</a></h3>
-            <ul class="guide-bullets"><li>Explains national law plus every council bylaw in plain language.</li><li>Includes signage tips and downloadable cheat sheets for North and South Island.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Get a plain-English breakdown of national law alongside every council bylaw before you park up. The guide shows how to read signage, prove compliance offline, and download quick-reference cheat sheets for both islands.</p>
+            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Region-by-region rules<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="free-camping-nz-legal.html">Can You Camp for Free in NZ, Where It Is Legal and Safe</a></h3>
-            <ul class="guide-bullets"><li>Identifies genuinely free camping options and typical enforcement patterns.</li><li>Offers etiquette, safety, and legality checks before you settle in for the night.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">See exactly where camping is genuinely free, from council reserves to DOC basics, without risking infringement notices. We walk through etiquette, safety, and legality checks so you roll in confident and welcomed.</p>
+            <p class="guide-links"><a href="free-camping-nz-legal.html">Legal free camping workflow<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Dump station map<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="where-to-camp-in-new-zealand.html">Where You Can Camp in New Zealand, A Complete Location Guide</a></h3>
-            <ul class="guide-bullets"><li>Highlights DOC, council, private, and iwi-managed stays for both islands.</li><li>Seasonal notes and access guidance help match locations to your trip style.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Choose between DOC land, council reserves, private holiday parks, and iwi-managed stays with regional highlights for each island. Seasonal advice and access notes help you match destinations to your crew and vehicle.</p>
+            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Browse the full location guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">See the scenic list<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="holiday-parks-nz-booking-guide.html">Holiday Parks in New Zealand, How to Choose and Book</a></h3>
-            <ul class="guide-bullets"><li>Compares amenities, pricing bands, partners, and loyalty perks for NZ holiday parks.</li><li>Step-by-step booking, cancellation, and after-hours arrival workflow with checklists.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Compare amenities, pricing bands, and partner booking flows so you can lock in powered or unpowered sites within minutes. We unpack loyalty perks, cancellation rules, and late-arrival hacks with printable checklists.</p>
+            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget calculator<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="doc-campsites-huts-guide.html">DOC Campsites and Huts, Reservations, Fees, and Etiquette</a></h3>
-            <ul class="guide-bullets"><li>Breaks down DOC campsite and hut categories, fees, and booking windows.</li><li>Etiquette tips, alert links, and comparisons prepare you for serviced or backcountry stays.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Understand every DOC campsite and hut category, the fees attached, and when booking windows open. Etiquette reminders, alert links, and side-by-side comparisons prepare you for serviced campgrounds or backcountry bivvies.</p>
+            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Read the DOC playbook<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="self-contained-vehicles-nz.html">Self-Contained Vehicles in NZ, What It Really Requires</a></h3>
-            <ul class="guide-bullets"><li>Translates NZS 5465 requirements for fixed toilets, tanks, vents, and inspection prep.</li><li>Covers enforcement realities and includes printable compliance checklists.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Decode the updated NZS 5465 requirements for fixed toilets, tanks, vents, and inspection paperwork before you front an auditor. We explain real-world enforcement and include printable checklists to keep your rig compliant.</p>
+            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Certification checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="dump-stations-nz.html">Dump Stations and Waste Etiquette for Campers</a></h3>
-            <ul class="guide-bullets"><li>Maps every dump station nationwide with gear suggestions and rinse routines.</li><li>Shows how to avoid fines, manage detergents, and keep facilities open.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Plot every dump station nationwide with gear suggestions and rinse routines that keep pads spotless. You’ll know how to avoid fines, handle detergents responsibly, and help councils keep facilities open.</p>
+            <p class="guide-links"><a href="dump-stations-nz.html">Waste etiquette guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained tips<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="campfire-rules-nz.html">Fire Rules, Bans, and Safe Cooking Outdoors</a></h3>
-            <ul class="guide-bullets"><li>Outlines fire seasons, permits, and regional restrictions at a glance.</li><li>Decision charts plus cooking alternatives keep meals on track during burn bans.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Stay ahead of restricted and prohibited fire seasons with region-by-region notes and permit links. Decision charts and cooking alternatives ensure dinner still happens when open flames are off-limits.</p>
+            <p class="guide-links"><a href="campfire-rules-nz.html">Check current fire rules<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="nz-camping-seasons-weather-sandflies.html">Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</a></h3>
-            <ul class="guide-bullets"><li>Delivers month-by-month comfort intel, wind/rain trends, and sandfly hotspots.</li><li>Suggests gear and tactics to stay comfortable without overpacking.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Plan around New Zealand’s shifting weather bands, winds, and sandfly zones with month-by-month comfort intel. Gear advice and coping tactics keep the crew comfortable without overpacking.</p>
+            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Packing checklist<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="camping-packing-list-nz.html">Essential NZ Camping Packing List with Regional Variants</a></h3>
-            <ul class="guide-bullets"><li>Lists core essentials plus alpine, coastal, and wet-weather add-ons for NZ trips.</li><li>Includes printable checklist and comms/emergency recommendations.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Work through a practical packing plan covering core essentials plus alpine, coastal, and wet-weather extras for NZ trips. Printable checklists and comms/emergency tips make group prep fast.</p>
+            <p class="guide-links"><a href="camping-packing-list-nz.html">Download the checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="responsible-camping-nz.html">Responsible Camping in NZ, Leave No Trace Applied Locally</a></h3>
-            <ul class="guide-bullets"><li>Adapts Leave No Trace to Aotearoa with wildlife and biosecurity guidance.</li><li>Community expectations and shareable code-of-conduct graphic keep locals onside.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">See how Leave No Trace principles translate to Aotearoa’s landscapes, wildlife, and communities. The guide covers biosecurity basics and offers a shareable code of conduct to keep locals onside.</p>
+            <p class="guide-links"><a href="responsible-camping-nz.html">Read the code of conduct<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Waste etiquette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="top-scenic-campsites-nz.html">Top 25 Scenic Campsites in New Zealand by Region</a></h3>
-            <ul class="guide-bullets"><li>Showcases 25 scenic campsites with KiwiCamping deep links and access notes.</li><li>Photo ideas and booking cues help you line up sunrise-perfect stays.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Discover 25 postcard-ready campsites with KiwiCamping deep links for instant saving and navigation. Access notes, booking cues, and photo ideas help you plan sunrise-perfect stays.</p>
+            <p class="guide-links"><a href="top-scenic-campsites-nz.html">See the top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Regional overview<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="two-week-camper-itinerary-nz.html">Two-Week New Zealand Camper Itinerary, North and South Islands</a></h3>
-            <ul class="guide-bullets"><li>Provides a 14-day itinerary mixing DOC, freedom, and holiday park nights.</li><li>Fuel, ferry, grocery, GPX, and printable day plans make customizing easy.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Follow a 14-day itinerary that balances DOC huts, freedom sites, and holiday parks across both islands. Fuel, ferry, grocery, GPX, and printable day plans make customising effortless.</p>
+            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Load the 14-day plan<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget the trip<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="camping-costs-nz.html">Costs of Camping in NZ, Budget Breakdown with Real Examples</a></h3>
-            <ul class="guide-bullets"><li>Builds sample budgets for solo, couple, and family adventures across seasons.</li><li>Accounts for accommodation mix, fuel, ferries, food, and gear amortization.</li></ul>
-            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
+            <span class="guide-card-arrow" aria-hidden="true">→</span>
+            <p class="guide-summary">Build realistic budgets for solo, couple, and family adventures across seasons. We factor in accommodation mix, fuel, ferries, food, and gear amortisation so you can tweak the numbers quickly.</p>
+            <p class="guide-links"><a href="camping-costs-nz.html">Plan your budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article></section>
 
       <section id="reviews" class="reviews container" aria-label="Reviews and testimonials">
