--- a/index.html
+++ b/index.html
@@ -489,96 +489,104 @@
       </section>
 
       <section id="camping-guides" class="guides container" aria-label="KiwiCamping tutorials and blog posts">
-<article class="guide-preview">
-            <h3><a href="best-nz-camping-apps.html">Best Camping Apps for New Zealand in 2025</a></h3>
+        <div class="guides-header">
+          <h2>New Zealand Camping Guides</h2>
+          <p>Practical breakdowns of bylaws, itineraries, and planning tips so you can camp Aotearoa with confidence.</p>
+        </div>
+        <div class="guide-previews guide-grid">
+          <h3 class="guide-grid-title">Guides & camping knowledge</h3>
+          <article class="guide-preview">
+            <h3>Best Camping Apps for New Zealand in 2025</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">We field-tested KiwiCamping against Rankers, CamperMate, WikiCamps, and AllTrails to see which app actually works on New Zealand roads. Learn who each option suits, how offline data behaves, and where pricing or privacy pitfalls appear.</p>
             <p class="guide-links"><a href="best-nz-camping-apps.html">Read the full guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="freedom-camping-rules-nz.html">Freedom Camping in New Zealand, Rules by Region</a></h3>
+          <article class="guide-preview">
+            <h3>Freedom Camping in New Zealand, Rules by Region</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Get a plain-English breakdown of national law alongside every council bylaw before you park up. The guide shows how to read signage, prove compliance offline, and download quick-reference cheat sheets for both islands.</p>
             <p class="guide-links"><a href="freedom-camping-rules-nz.html">Region-by-region rules<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="free-camping-nz-legal.html">Can You Camp for Free in NZ, Where It Is Legal and Safe</a></h3>
+          <article class="guide-preview">
+            <h3>Can You Camp for Free in NZ, Where It Is Legal and Safe</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">See exactly where camping is genuinely free, from council reserves to DOC basics, without risking infringement notices. We walk through etiquette, safety, and legality checks so you roll in confident and welcomed.</p>
             <p class="guide-links"><a href="free-camping-nz-legal.html">Legal free camping workflow<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Dump station map<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="where-to-camp-in-new-zealand.html">Where You Can Camp in New Zealand, A Complete Location Guide</a></h3>
+          <article class="guide-preview">
+            <h3>Where You Can Camp in New Zealand, A Complete Location Guide</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Choose between DOC land, council reserves, private holiday parks, and iwi-managed stays with regional highlights for each island. Seasonal advice and access notes help you match destinations to your crew and vehicle.</p>
             <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Browse the full location guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="top-scenic-campsites-nz.html">See the scenic list<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="holiday-parks-nz-booking-guide.html">Holiday Parks in New Zealand, How to Choose and Book</a></h3>
+          <article class="guide-preview">
+            <h3>Holiday Parks in New Zealand, How to Choose and Book</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Compare amenities, pricing bands, and partner booking flows so you can lock in powered or unpowered sites within minutes. We unpack loyalty perks, cancellation rules, and late-arrival hacks with printable checklists.</p>
             <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget calculator<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="doc-campsites-huts-guide.html">DOC Campsites and Huts, Reservations, Fees, and Etiquette</a></h3>
+          <article class="guide-preview">
+            <h3>DOC Campsites and Huts, Reservations, Fees, and Etiquette</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Understand every DOC campsite and hut category, the fees attached, and when booking windows open. Etiquette reminders, alert links, and side-by-side comparisons prepare you for serviced campgrounds or backcountry bivvies.</p>
             <p class="guide-links"><a href="doc-campsites-huts-guide.html">Read the DOC playbook<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="self-contained-vehicles-nz.html">Self-Contained Vehicles in NZ, What It Really Requires</a></h3>
+          <article class="guide-preview">
+            <h3>Self-Contained Vehicles in NZ, What It Really Requires</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Decode the updated NZS 5465 requirements for fixed toilets, tanks, vents, and inspection paperwork before you front an auditor. We explain real-world enforcement and include printable checklists to keep your rig compliant.</p>
             <p class="guide-links"><a href="self-contained-vehicles-nz.html">Certification checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="dump-stations-nz.html">Dump Stations and Waste Etiquette for Campers</a></h3>
+          <article class="guide-preview">
+            <h3>Dump Stations and Waste Etiquette for Campers</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Plot every dump station nationwide with gear suggestions and rinse routines that keep pads spotless. You’ll know how to avoid fines, handle detergents responsibly, and help councils keep facilities open.</p>
             <p class="guide-links"><a href="dump-stations-nz.html">Waste etiquette guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="self-contained-vehicles-nz.html">Self-contained tips<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="campfire-rules-nz.html">Fire Rules, Bans, and Safe Cooking Outdoors</a></h3>
+          <article class="guide-preview">
+            <h3>Fire Rules, Bans, and Safe Cooking Outdoors</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Stay ahead of restricted and prohibited fire seasons with region-by-region notes and permit links. Decision charts and cooking alternatives ensure dinner still happens when open flames are off-limits.</p>
             <p class="guide-links"><a href="campfire-rules-nz.html">Check current fire rules<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="nz-camping-seasons-weather-sandflies.html">Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</a></h3>
+          <article class="guide-preview">
+            <h3>Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Plan around New Zealand’s shifting weather bands, winds, and sandfly zones with month-by-month comfort intel. Gear advice and coping tactics keep the crew comfortable without overpacking.</p>
             <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-packing-list-nz.html">Packing checklist<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="camping-packing-list-nz.html">Essential NZ Camping Packing List with Regional Variants</a></h3>
+          <article class="guide-preview">
+            <h3>Essential NZ Camping Packing List with Regional Variants</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Work through a practical packing plan covering core essentials plus alpine, coastal, and wet-weather extras for NZ trips. Printable checklists and comms/emergency tips make group prep fast.</p>
             <p class="guide-links"><a href="camping-packing-list-nz.html">Download the checklist<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="responsible-camping-nz.html">Responsible Camping in NZ, Leave No Trace Applied Locally</a></h3>
+          <article class="guide-preview">
+            <h3>Responsible Camping in NZ, Leave No Trace Applied Locally</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">See how Leave No Trace principles translate to Aotearoa’s landscapes, wildlife, and communities. The guide covers biosecurity basics and offers a shareable code of conduct to keep locals onside.</p>
             <p class="guide-links"><a href="responsible-camping-nz.html">Read the code of conduct<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="dump-stations-nz.html">Waste etiquette<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="top-scenic-campsites-nz.html">Top 25 Scenic Campsites in New Zealand by Region</a></h3>
+          <article class="guide-preview">
+            <h3>Top 25 Scenic Campsites in New Zealand by Region</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Discover 25 postcard-ready campsites with KiwiCamping deep links for instant saving and navigation. Access notes, booking cues, and photo ideas help you plan sunrise-perfect stays.</p>
             <p class="guide-links"><a href="top-scenic-campsites-nz.html">See the top 25<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="where-to-camp-in-new-zealand.html">Regional overview<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="two-week-camper-itinerary-nz.html">Two-Week New Zealand Camper Itinerary, North and South Islands</a></h3>
+          <article class="guide-preview">
+            <h3>Two-Week New Zealand Camper Itinerary, North and South Islands</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Follow a 14-day itinerary that balances DOC huts, freedom sites, and holiday parks across both islands. Fuel, ferry, grocery, GPX, and printable day plans make customising effortless.</p>
             <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Load the 14-day plan<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="camping-costs-nz.html">Budget the trip<span class="link-arrow" aria-hidden="true">↗</span></a></p>
           </article>
-<article class="guide-preview">
-            <h3><a href="camping-costs-nz.html">Costs of Camping in NZ, Budget Breakdown with Real Examples</a></h3>
+          <article class="guide-preview">
+            <h3>Costs of Camping in NZ, Budget Breakdown with Real Examples</h3>
             <span class="guide-card-arrow" aria-hidden="true">→</span>
             <p class="guide-summary">Build realistic budgets for solo, couple, and family adventures across seasons. We factor in accommodation mix, fuel, ferries, food, and gear amortisation so you can tweak the numbers quickly.</p>
             <p class="guide-links"><a href="camping-costs-nz.html">Plan your budget<span class="link-arrow" aria-hidden="true">↗</span></a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings<span class="link-arrow" aria-hidden="true">↗</span></a></p>
-          </article></section>
+          </article>
+        </div>
+      </section>
 
       <section id="reviews" class="reviews container" aria-label="Reviews and testimonials">
         <h2>What Kiwi campers say</h2>
@@ -833,6 +841,26 @@
           }
         });
       })();
+
+      document.querySelectorAll('.guide-preview').forEach((card) => {
+        const primaryLink = card.querySelector('.guide-links a');
+        if (!primaryLink) return;
+        const heading = card.querySelector('h3');
+        const labelText = heading ? heading.textContent.trim() : primaryLink.textContent.trim();
+        card.setAttribute('role', 'link');
+        card.setAttribute('tabindex', '0');
+        card.setAttribute('aria-label', `${labelText} - open guide`);
+        card.addEventListener('click', (event) => {
+          if (event.target.closest('a')) return;
+          window.location.href = primaryLink.href;
+        });
+        card.addEventListener('keydown', (event) => {
+          if (event.key === 'Enter' || event.key === ' ') {
+            event.preventDefault();
+            primaryLink.click();
+          }
+        });
+      });
 
       // Toggle 'scrolled' class and drive hero effects (fade/blur + parallax)
       const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
