--- a/de/index.html
+++ b/de/index.html
@@ -737,7 +737,7 @@
       <div class="container footer-inner">
         <p>cntxt · Coded in NZ · © 2025</p>
         <nav class="language-selector" aria-label="Sprachauswahl">
-          <button type="button" class="language-toggle" aria-expanded="false" aria-controls="language-menu">Englische Version</button>
+          <button type="button" class="language-toggle" aria-expanded="false" aria-controls="language-menu">Sprache ändern</button>
           <ul class="language-menu" id="language-menu" hidden>
             <li><a data-lang="en" href="/">English</a></li>
             <li><a data-lang="fr" href="/fr/">Français</a></li>
