--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
 
         <p class="hero-blurb">
-          KiwiCamping is the essential offline camping companion for New Zealand. Explore 3,500+ DOC campsites and huts, holiday parks, freedom camping areas, dump stations, and campervan stops backed by official DOC and council data. Sync that site info for offline access, then filter by vehicle access, amenities, DOC hut passes, self-contained requirements, and facility type—even when you're off-grid. Plan road trips, tramping routes, camper life missions, or vanlife loops for vans, caravans, and RVs while staying on the right side of NZ camping rules.
+          KiwiCamping is the essential offline camping companion for New Zealand. Explore 3,500+ DOC campsites and huts, holiday parks, freedom camping areas, dump stations, and campervan stops backed by official DOC and council data. Sync that site info for offline access, then filter by vehicle access, amenities, DOC hut passes, self-contained requirements, and facility type, even when you're off-grid. Plan road trips, tramping routes, camper life missions, or vanlife loops for vans, caravans, and RVs while staying on the right side of NZ camping rules.
         </p>
       </div>
     </header>
@@ -371,7 +371,7 @@
           <article class="feature-card">
             <img src="images/kiwicamping-feature-3.webp" alt="DOC hut details with passes, capacity, and access notes" loading="lazy" />
             <h3>DOC huts & passes</h3>
-            <p>See hut tickets, Great Walk booking info, capacities, track grades, and access notes at a glance—no more flipping between apps.</p>
+            <p>See hut tickets, Great Walk booking info, capacities, track grades, and access notes at a glance. No more flipping between apps.</p>
           </article>
 
           <article class="feature-card">
@@ -438,7 +438,7 @@
             <ul class="checklist">
               <li>Download the app and sync offline NZ campsite, hut, and holiday park info once.</li>
               <li>Use filters to surface DOC huts, campsites, dump stations, and facilities you need.</li>
-              <li>Add sites to your trip planner and access them anywhere—even off grid.</li>
+              <li>Add sites to your trip planner and access them anywhere, even off grid.</li>
             </ul>
           </div>
           <div class="aso-col">
@@ -624,7 +624,7 @@
           <article class="review-card">
             <div class="stars" aria-hidden="true">★★★★★</div>
             <h3 class="review-title">Camper life organiser</h3>
-            <p>Favorites keep our camper life loop tidy—freedom spots for mornings, holiday parks for laundry night.</p>
+            <p>Favorites keep our camper life loop tidy. Freedom spots for mornings, holiday parks for laundry night.</p>
             <p class="reviewer"><em>- Dylan P.</em></p>
           </article>
           <article class="review-card">
@@ -648,7 +648,7 @@
           <article class="review-card">
             <div class="stars" aria-hidden="true">★★★★★</div>
             <h3 class="review-title">Backcountry to beach</h3>
-            <p>Great Walk huts, coastal holiday parks, and ferry info live side-by-side—perfect for mixed trips.</p>
+            <p>Great Walk huts, coastal holiday parks, and ferry info live side-by-side. Perfect for mixed trips.</p>
             <p class="reviewer"><em>- Tane H.</em></p>
           </article>
           <article class="review-card">
