--- a/fr/index.html
+++ b/fr/index.html
@@ -737,7 +737,7 @@
       <div class="container footer-inner">
         <p>cntxt · Coded in NZ · © 2025</p>
         <nav class="language-selector" aria-label="Sélecteur de langue">
-          <button type="button" class="language-toggle" aria-expanded="false" aria-controls="language-menu">Version anglaise</button>
+          <button type="button" class="language-toggle" aria-expanded="false" aria-controls="language-menu">Changer de langue</button>
           <ul class="language-menu" id="language-menu" hidden>
             <li><a data-lang="en" href="/">English</a></li>
             <li><a data-lang="fr" href="/fr/">Français</a></li>
